# traffic-viewer

./: Cargo.toml  app.manifest  build.rs
res/: app.manifest  res.rc
src/: main.rs  ui.rs
src/core/: fsd.rs  fsuipc.rs  metar.rs  mod.rs  vatsim.rs  worker.rs
src/win32_ui_impl/: about_page.rs  consts.rs  dispatcher.rs  main_page.rs  mod.rs  status_bar.rs  util.rs  window.rs
